--- a/index.ipynb
+++ b/index.ipynb
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f71a9968ea0>"
+       "<sqlite3.Cursor at 0x1415a84ece0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "  'zipcode ': '48933'}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "7              3478 Be Sreet    Lansing    MI    48933  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,20 +461,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the grades table\n",
     "conn2 = sqlite3.connect('grades.sqlite3')\n",
-    "cur = conn.cursor()\n",
-    "cur.execute = \"\"\"\n",
+    "cur2 = conn2.cursor()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive D is DATA\n",
+      " Volume Serial Number is 4893-394E\n",
+      "\n",
+      " Directory of D:\\Documents\\GitHub\\flatiron-data-science\\phase01\\dsc-database-admin-101-lab\n",
+      "\n",
+      "04/28/2022  07:38 AM    <DIR>          .\n",
+      "04/28/2022  07:38 AM    <DIR>          ..\n",
+      "04/28/2022  07:15 AM                69 .gitignore\n",
+      "04/28/2022  07:36 AM    <DIR>          .ipynb_checkpoints\n",
+      "04/28/2022  07:15 AM                95 .learn\n",
+      "04/28/2022  07:15 AM             1,213 contact_list.pickle\n",
+      "04/28/2022  07:15 AM             1,849 CONTRIBUTING.md\n",
+      "04/28/2022  07:37 AM                 0 grades.sqlite3\n",
+      "04/28/2022  07:38 AM            20,936 index.ipynb\n",
+      "04/28/2022  07:15 AM             1,371 LICENSE.md\n",
+      "04/28/2022  07:15 AM             3,705 README.md\n",
+      "04/28/2022  07:37 AM             8,192 school.sqlite\n",
+      "               9 File(s)         37,430 bytes\n",
+      "               3 Dir(s)  190,670,594,048 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1415ce45340>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create grades table\n",
+    "cur2.execute ( \"\"\"\n",
     "            CREATE TABLE grades (\n",
     "            userID INTEGER NOT NULL,\n",
     "            courseID INTEGER NOT NULL,\n",
     "            grade INTEGER NOT NULL,\n",
     "            PRIMARY KEY(userID, courseID)\n",
-    "            );\"\"\""
+    "            );\"\"\")"
    ]
   },
   {
@@ -488,46 +544,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "no such column: firstName",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-59f264b4f8b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Find the duplicate entry\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m cur.execute(\"\"\"SELECT firstName, lastName, telephone, COUNT(*) \n\u001b[0m\u001b[1;32m      3\u001b[0m                \u001b[0mFROM\u001b[0m \u001b[0mcontactInfo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                \u001b[0mGROUP\u001b[0m \u001b[0mBY\u001b[0m \u001b[0mfirstName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlastName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtelephone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                HAVING COUNT(*) > 1;\"\"\").fetchall()\n",
-      "\u001b[0;31mOperationalError\u001b[0m: no such column: firstName"
-     ]
+     "data": {
+      "text/plain": [
+       "[(5, 'Jane', 'Evans', 3259909290, 2)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Find the duplicate entry\n",
-    "cur.execute(\"\"\"SELECT firstName, lastName, telephone, COUNT(*) \n",
+    "cur.execute(\"\"\"SELECT id, first_name, last_name, telephone_number, COUNT(*) \n",
     "               FROM contactInfo\n",
-    "               GROUP BY firstName, lastName, telephone\n",
+    "               GROUP BY first_name, last_name, telephone_number\n",
     "               HAVING COUNT(*) > 1;\"\"\").fetchall()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1415a84ece0>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Delete the duplicate entry\n"
+    "# Delete the duplicate entry\n",
+    "cur.execute(\"\"\"DELETE FROM contactInfo\n",
+    "                WHERE id = 5\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that the duplicate entry was removed\n"
+    "# Check that the duplicate entry was removed\n",
+    "cur.execute(\"\"\"SELECT id, first_name, last_name, telephone_number, COUNT(*) \n",
+    "               FROM contactInfo\n",
+    "               GROUP BY first_name, last_name, telephone_number\n",
+    "               HAVING COUNT(*) > 1;\"\"\").fetchall()"
    ]
   },
   {
@@ -541,20 +624,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1415a84ece0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Update Ed's address\n"
+    "# Update Ed's address\n",
+    "cur.execute(\"\"\"UPDATE contactInfo\n",
+    "                SET street = '2910 Simpson Avenue',\n",
+    "                      city = 'York',\n",
+    "                     state = 'PA',\n",
+    "                   zipcode = 17403\n",
+    "               WHERE first_name = 'Ed' AND last_name = 'Lyman'; \"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>role</th>\n",
+       "      <th>telephone_number</th>\n",
+       "      <th>street</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zipcode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Christine</td>\n",
+       "      <td>Holden</td>\n",
+       "      <td>staff</td>\n",
+       "      <td>2035687697</td>\n",
+       "      <td>1672 Whitman Court</td>\n",
+       "      <td>Stamford</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>6995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Christopher</td>\n",
+       "      <td>Warren</td>\n",
+       "      <td>student</td>\n",
+       "      <td>2175150957</td>\n",
+       "      <td>1935 University Hill Road</td>\n",
+       "      <td>Champaign</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>61938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Linda</td>\n",
+       "      <td>Jacobson</td>\n",
+       "      <td>staff</td>\n",
+       "      <td>4049446441</td>\n",
+       "      <td>479 Musgrave Street</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Andrew</td>\n",
+       "      <td>Stepp</td>\n",
+       "      <td>student</td>\n",
+       "      <td>7866419252</td>\n",
+       "      <td>2981 Lamberts Branch Road</td>\n",
+       "      <td>Hialeah</td>\n",
+       "      <td>Fl</td>\n",
+       "      <td>33012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Evans</td>\n",
+       "      <td>student</td>\n",
+       "      <td>3259909290</td>\n",
+       "      <td>1461 Briarhill Lane</td>\n",
+       "      <td>Abilene</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>79602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>Raines</td>\n",
+       "      <td>student</td>\n",
+       "      <td>9075772295</td>\n",
+       "      <td>3975 Jerry Toth Drive</td>\n",
+       "      <td>Ninilchik</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>99639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Ed</td>\n",
+       "      <td>Lyman</td>\n",
+       "      <td>student</td>\n",
+       "      <td>5179695576</td>\n",
+       "      <td>2910 Simpson Avenue</td>\n",
+       "      <td>York</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>17403</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id   first_name last_name     role  telephone_number  \\\n",
+       "0   1    Christine    Holden    staff        2035687697   \n",
+       "1   2  Christopher    Warren  student        2175150957   \n",
+       "2   3        Linda  Jacobson    staff        4049446441   \n",
+       "3   4       Andrew     Stepp  student        7866419252   \n",
+       "4   6         Jane     Evans  student        3259909290   \n",
+       "5   7         Mary    Raines  student        9075772295   \n",
+       "6   8           Ed     Lyman  student        5179695576   \n",
+       "\n",
+       "                      street       city state  zipcode  \n",
+       "0         1672 Whitman Court   Stamford    CT     6995  \n",
+       "1  1935 University Hill Road  Champaign    IL    61938  \n",
+       "2        479 Musgrave Street    Atlanta    GA    30303  \n",
+       "3  2981 Lamberts Branch Road    Hialeah    Fl    33012  \n",
+       "4        1461 Briarhill Lane    Abilene    TX    79602  \n",
+       "5      3975 Jerry Toth Drive  Ninilchik    AK    99639  \n",
+       "6        2910 Simpson Avenue       York    PA    17403  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Query the database to ensure the change was made\n"
+    "# Query the database to ensure the change was made\n",
+    "cur.execute(\"\"\"SELECT *\n",
+    "                FROM contactInfo;\"\"\")\n",
+    "df = pd.DataFrame(cur.fetchall())\n",
+    "df.columns = [x[0] for x in cur.description]\n",
+    "df"
    ]
   },
   {
@@ -568,11 +819,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "conn.commit()"
    ]
   },
   {
@@ -587,7 +839,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -601,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
